--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,33 +1,34 @@
 {% set name = "update_checker" %}
 {% set version = "0.17" %}
-{% set sha256 = "2def8db7f63bd45c7d19df5df570f3f3dfeb1a1f050869d7036529295db10e62" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: 2def8db7f63bd45c7d19df5df570f3f3dfeb1a1f050869d7036529295db10e62
 
 build:
   number: 0
   noarch: python
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
-  build:
+  host:
+    - pip
     - python
-    - setuptools
-
   run:
     - python
     - requests >=2.3.0
 
 test:
+  requires:
+    - pip
   imports:
     - update_checker
+  commands:
+    - python -m pip check
 
 about:
   home: https://github.com/bboe/update_checker
